Created /status endpoint
