# api/api/controllers/misc.js
@@ -5,9 +5,20 @@ var auth = require('../helpers/auth');
 var connection = require('../helpers/db')
 
 module.exports = {
+  status: status,
   getDomainWhitelist: getDomainWhitelist,
   whatIsMyIP: whatIsMyIP
 };
+
+function status(req, res) {
+  // TODO: Reaturn correct information
+  res.json({
+    message: 'Status: OK',
+    healthy: true,
+    production: false,
+    setupMode: true
+  })
+}
 
 function getDomainWhitelist(req, res) {
   // No protection of this endpoint
